--- a/front/src/css/contacto.css
+++ b/front/src/css/contacto.css
@@ -1,11 +1,11 @@
 #tltoc{
-    font-family: "Kanit", sans-serif;
+    font-family: "Lato", sans-serif;
     font-weight: 700;
     font-size: 30px;
     font-style: normal;
 }
 #tltinf{
-    font-family: "Kanit", sans-serif;
+    font-family: "Lato", sans-serif;
     font-weight: 700;
     font-size: 30px;
     font-style: normal;
@@ -14,8 +14,8 @@
     background-color: rgb(224, 223, 223);
 }
 #txtc{
-    font-family: "Kanit", sans-serif;
-    font-weight: 200;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
     font-size: 18px;
     font-style: normal;
 }
