--- a/front/src/css/mainbsas.css
+++ b/front/src/css/mainbsas.css
@@ -1,5 +1,5 @@
 #titulobs{
-    font-family: "Kanit", sans-serif;
+    font-family: "Lato", sans-serif;
     font-weight: 700;
     font-size: 30px;
     font-style: normal;
