--- a/front/src/css/maintucuman.css
+++ b/front/src/css/maintucuman.css
@@ -1,11 +1,11 @@
 #titulot{
-    font-family: "Kanit", sans-serif;
+    font-family: "Lato", sans-serif;
     font-weight: 700;
     font-size: 30px;
     font-style: normal;
 }
 #titulop{
-    font-family: "Kanit", sans-serif;
+    font-family: "Lato", sans-serif;
     font-weight: 700;
     font-size: 20px;
     font-style: normal;
