--- a/front/src/css/zonas.css
+++ b/front/src/css/zonas.css
@@ -1,11 +1,11 @@
 #tituloz{
-    font-family: "Kanit", sans-serif;
+    font-family: "Lato", sans-serif;
     font-weight: 700;
     font-size: 35px;
     font-style: normal;
 }
 #tituloc{
-    font-family: "Kanit", sans-serif;
+    font-family: "Lato", sans-serif;
     font-weight: 700;
     font-size: 20px;
     font-style: normal;
